# kronfluence

./: pyproject.toml
experiments/: 00_layers_scaling.py  00_scaling_plots.py  00_scaling_test.sh  00_scaling_trend_plots.py  00_toy_scaling_documentation.md  00_toy_scaling_test.py  00_zoomed_trend_plots.py  01_accuracy_test.sh  01_plot_by_examples.py  01_plot_by_params.py  01_plot_by_sample.py  01_toy_accuracy_test.py  02_lm_testing.py
