[project]
name = "kronfluence"
version = "1.0.1"
description = "Influence Functions with (Eigenvalue-corrected) Kronecker-factored Approximate Curvature"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9.0"
keywords = [
    "Training Data Attribution",
    "Influence Functions",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "accelerate>=0.31.0",
    "einops>=0.8.0",
    "einconv>=0.1.0",
    "opt_einsum>=3.3.0",
    "safetensors>=0.4.2",
    "tqdm>=4.66.4",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.4.8",
    "pylint>=3.2.3",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "twine>=5.1.0",
    "build>=1.2.1",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pylint.format]
max-line-length = "120"
max-locals = 45
max-args = 20
max-branches = 30
max-statements = 90

disable = """
    missing-module-docstring,
    duplicate-code,
    too-few-public-methods,
    invalid-name,
    too-many-instance-attributes,
    too-many-ancestors,
    not-callable,
    use-implicit-booleaness-not-comparison,
    implicit-str-concat,
    inconsistent-return-statements,
    too-many-lines,
    too-many-public-methods,
"""
